--- a/pav/pav/doctype/project_dimension/project_dimension.json
+++ b/pav/pav/doctype/project_dimension/project_dimension.json
@@ -15,6 +15,8 @@
    "fetch_from": "project.project_name",
    "fieldname": "project_name",
    "fieldtype": "Data",
+   "in_list_view": 1,
+   "in_standard_filter": 1,
    "label": "Project Name",
    "read_only": 1
   },
@@ -43,8 +45,8 @@
    "read_only": 1
   }
  ],
- "modified": "2020-09-15 15:58:31.777166",
- "modified_by": "Administrator",
+ "modified": "2020-09-24 08:52:11.165083",
+ "modified_by": "a.kuhlani@partner-cons.com",
  "module": "PAV",
  "name": "Project Dimension",
  "owner": "Administrator",
@@ -82,6 +84,7 @@
   }
  ],
  "quick_entry": 1,
+ "search_fields": "project_name",
  "sort_field": "modified",
  "sort_order": "DESC",
  "title_field": "project_title",
